# engram

./: .cursorrules  .gitignore  CLAUDE.md  README.md  pyproject.toml
.agent/: lessons.md  session-handoff.md
docs/: ARCHITECTURE.md  DESIGN-MANIFESTO.md
docs/design/: ingestion.md  recall.md
engram/: __init__.py  config.py  engram_memory_system.py  memory_system.py  models.py
engram/benchmarking/: __init__.py
engram/diagnostics/: __init__.py  audit.py  coverage.py  failures.py  overlap.py  recall_trace.py  recall_trace_html.py
engram/ingestion/: __init__.py  derived.py  factory.py  graph.py  persist.py  pipeline.py  schema.py  vector_index.py
engram/ingestion/extractors/: __init__.py  canonicalization.py  claim.py  co_occurrence.py  ner.py  ngram.py  preference.py  segmentation.py
engram/ingestion/preferences/: __init__.py  heldout.json  seeds.json
engram/recall/: __init__.py  assembly.py  context.py  expansion.py  factory.py  intent.py  pipeline.py  scoring.py  seeding.py  weights.json  weights.py
engram/recall/intents/: __init__.py  heldout.json  seeds.json
profiling/: ingestion-b325f53.json  ingestion-c40d5bc.json  minilm-pref-seq.json  phase5-batch10.json  phase5-batch50.json  phase5-seq.json
scripts/: check_fingerprint_equivalence.py  profile_ingestion.py  smoke_pr_a.py  trace_recall.py
tests/: _fake_nlp.py  test_canonicalization.py  test_derived.py  test_diagnostics_audit.py  test_diagnostics_coverage.py  test_diagnostics_failures.py  test_diagnostics_overlap.py  test_fingerprint_discipline.py  test_graph_store.py  test_ingest_determinism.py  test_ingest_many_equivalence.py  test_layers.py  test_memory_system_integration.py  test_memory_system_protocol.py  test_module_boundaries.py  test_ngram_extractor.py  test_persist_roundtrip.py  test_preferences.py  test_recall_intent.py  test_recall_pipeline.py  test_recall_stages.py  test_recall_trace.py  test_time_anchor.py  test_vector_index.py
