[project]
name = "engram"
version = "0.0.1"
description = "Graph-based memory system for LLM agents, benchmarked against LongMemEval and LOCOMO."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Ryan Tuosto" }]
dependencies = [
    "networkx>=3.2,<4",
    "msgpack>=1.0,<2",
    "spacy>=3.7,<4",
    "sentence-transformers>=2.7,<6",
    "numpy>=1.26,<3",
    "httpx>=0.27,<1",
    "rapidfuzz>=3.9,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["engram*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that hit real models or datasets",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
